# qa_guru_HW19_browserstack

./: .gitignore  README.md  pyproject.toml
qa_guru_HW19_browserstack/utils/: attach.py
tests/: conftest.py  test_wikipedia.py
